<resources>
    <string name="app_name">DatList</string>

    <string name="action_settings">Settings</string>
    <string name="add_item">Add Items</string>
    <string name="get_items">Get items</string>
    <string name="add">Add</string>

    <!-- Activity Titles Strings -->
    <string name="activity_title_sign_in">Sign In</string>
    <string name="activity_title_create_account">Create Account</string>

    <!-- Drawer Strings -->
    <string name="drawer_layout_guest">Guest</string>
    <string name="drawer_open_drawer">Drawer opened</string>
    <string name="drawer_close_drawer">Drawer closed</string>
    <string name="drawer_layout_list">List</string>
    <string name="drawer_layout_recipes">Recipes</string>
    <string name="drawer_layout_stock">Items</string>
    <string name="drawer_layout_items">Items</string>
    <string name="drawer_layout_settings">Settings</string>

    <!-- Login String -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setup_sync">SetupSyncActivity</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_create_account">Create Account</string>

    <!-- Settings String -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_sign_out">Sign out</string>

    <!-- Dialog String -->
    <string name="dialog_title_sign_out">Sign Out</string>
    <string name="dialog_message_sign_out">The application will restart without remembering you account information</string>
    <string name="dialog_positive_sign_out">Sign Out</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="recipe_description">Describe your recipe</string>
    <string name="name_recipe_hint">Name your recipe</string>
    <string name="name_recipe_error">You must name your recipe.</string>
    <string name="ingredient_list_error">You must supply at least two ingredients</string>
    <string name="login_username_error">You must enter a valid username</string>
    <string name="login_password_error">You must enter a valid password</string>
    <string name="login_show_password">Show password</string>
    <string name="login_dialog_username_conflict_title">Couldn\'t create an account</string>
    <string name="login_dialog_username_conflict_message">Username has already been taken</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="activity_title_add_recipe_activity">Create your recipe</string>
    <string name="add_recipe_dialog_username_conflict_title">Can\'t create a new recipe</string>
    <string name="add_recipe_dialog_username_conflict_message">You already created a recipe with the same name.</string>
    <string name="fragment_title_list">Buy These</string>
    <string name="fragment_title_items">Buylist</string>
    <string name="fragment_title_recipes">Your Recipes</string>
    <string name="activity_title_settings">Your Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
